Stops image title and description overflowing the slideshow

--- a/less/widget-slideshow.less
+++ b/less/widget-slideshow.less
@@ -65,6 +65,10 @@
 	background-color: lighten(@color-swatch1, 5%);
 }
 
+.responsiveslideshow .figure {
+	overflow: hidden;
+}
+
 .responsiveslideshow .button--pagination {
 	margin-right: 0;
 	padding: 0 .75em;
